--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
 
             <div class="row row1">
                 <div class="col col1"></div>
-                <div class="col col2">
-                </div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
                 <div class="col col3"></div>
             </div>
 
@@ -26,11 +32,116 @@
                 <div class="col col1"></div>
                 <div class="col col2"></div>
                 <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
             </div>
 
             <div class="row row3">
                 <div class="col col1"></div>
                 <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+
+            </div>
+            <div class="row row3">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+
+            </div>
+            <div class="row row3">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+
+            </div>
+            <div class="row row3">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+
+            </div>
+            <div class="row row3">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+
+            </div>
+            <div class="row row3">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+
+            </div>
+            <div class="row row3">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+
+            </div>
+            <div class="row row3">
+                <div class="col col1"></div>
+                <div class="col col2"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
+                <div class="col col3"></div>
                 <div class="col col3"></div>
 
             </div>
