--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <script src="script.js"></script>
 </head>
 <body>
@@ -13,142 +15,140 @@
 
 
     <div class="whole-page">
-        <div class="game-board">
-
-            <div class="row row1">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
+        <div class="container-fluid">
+            <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-
-            <div class="row row2">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-            <div class="row row3">
-                <div class="col col1"></div>
-                <div class="col col2"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-                <div class="col col3"></div>
-
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
             </div>
-
-
-
-        </div>
+              <div class="row">
+              <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+              <div class="column">b</div>
+              <div class="column">c</div>
+                <div class="column">a</div>
+            </div>
+          </div>
     </div>  
 </body>
 </html>
