Deleted letters on grid

--- a/index.html
+++ b/index.html
@@ -17,136 +17,136 @@
     <div class="whole-page">
         <div class="container-fluid">
             <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
               <div class="row">
-              <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
-              <div class="column">b</div>
-              <div class="column">c</div>
-                <div class="column">a</div>
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
+              <div class="column"></div>
+              <div class="column"></div>
+                <div class="column"></div>
             </div>
           </div>
     </div>  
