--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <script src="script.js"></script>
 </head>
 <body>
-
-
+<header>
+    <h1>Mars Rover</h1>
+    <h3>Name: </h3>
+    <h3>Commands: </h3>
+    
+</header>
 
     <div class="whole-page">
         <div class="container-fluid">
