--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <header>
     <h1>Mars Rover</h1>
-    <h3>Name: </h3>
-    <h3>Commands: </h3>
+    <h3><label for='name'>Name: </label><input type='text' placeholder=" type name here">
+   <h3><label for='commands'>Commands: </label><input type='text' placeholder=" l,r,f,b">
     
 </header>
 
