--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <script src="script.js"></script>
 </head>
 <body>
+
 <header>
     <h1>Mars Rover</h1>
-    <h3><label for='name'>Name: </label><input type='text' placeholder=" type name here">
-   <h3><label for='commands'>Commands: </label><input type='text' placeholder=" l,r,f,b">
+    <h3><label for='name'>Name: </label><input type='text' placeholder=" type name here"><button class='enter-btn'>Go</button></h3>
+   <h3><label for='commands'>Commands: </label><input type='text' placeholder=" l,r,f,b"><button class= 'enter-btn'>Go</button></h3>
     
 </header>
 
